# aws-learn-nginx

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
