[tool.poetry]
name = "aws-learn-nginx"
version = "0.1.0"
description = ""
authors = ["Pedro Laraburu <pedrolaraburu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
